sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:13: error: value o is not a member of Int
    for (i<- n-2 o 0 by -1) {
                 ^