sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var n = getNombreValeurs()
  var B = false
  var x = 0
  do {
  	for (i<- 0 to n-2) {
    	if (plusPetit(i+1,i)){
    		echange(i,i+1)
      	x+=1}
  
  	}
  	for (i<- n-2 o 0 by -1) {
    	if (plusPetit(i+1,i)){
    		echange(i,i+1)
      	x+=1}
     if (x>0)
      	B=true
     else
      	B=false
  	}
  } while (B)
}
  